--- a/ansible-redmine-manual/ansible-redmine.yml
+++ b/ansible-redmine-manual/ansible-redmine.yml
@@ -10,10 +10,27 @@
         cache_valid_time: 86400
         autoclean: yes
 
-    - name: install Git
+    - name: install Git and build environment dependencies
+      become: yes
       apt:
         name:
           - git
+          - autoconf
+          - bison
+          - patch
+          - build-essential
+          - rustc
+          - libssl-dev 
+          - libyaml-dev 
+          - libreadline6-dev 
+          - zlib1g-dev 
+          - libgmp-dev 
+          - libncurses5-dev 
+          - libffi-dev 
+          - libgdbm6 
+          - libgdbm-dev 
+          - libdb-dev 
+          - uuid-dev
 
   tasks:
     - name: create user redmine
@@ -22,26 +39,48 @@
         state: present
         shell: /bin/bash
 
-    - name: install Rbenv
+    - name: installations under redmine user
       become_user: redmine
-      git:
-        repo: 'https://github.com/rbenv/rbenv.git'
-        dest: '{{ ansible_env.HOME }}/.rbenv'
+      block:
+        - name: install Rbenv
+          git:
+            repo: "https://github.com/rbenv/rbenv.git"
+            dest: "{{ ansible_env.HOME }}/.rbenv"
 
-    - name: eval1
-      lineinfile:
-        path: "{{ ansible_env.HOME }}/.rbenv/.bashrc"
-        line: eval "~/.rbenv/bin/rbenv init - bash)"
+        #    - name: configure shell to load rbenv
+        #      become_user: redmine
+        #      lineinfile:
+        #        path: "{{ ansible_env.HOME }}/.bashrc"
+        #        line: eval "{{ ansible_env.HOME }}/bin/rbenv init - bash"
 
-    - name: install ruby-build
-      become_user: redmine
-      git: 
-        repo: 'https://github.com/rbenv/ruby-build.git'
-        dest: '{{ ansible_env.HOME }}/.rbenv/plugins/ruby-build'
+        - name: install ruby-build
+          git: 
+            repo: "https://github.com/rbenv/ruby-build.git"
+            dest: "{{ ansible_env.HOME }}/.rbenv/plugins/ruby-build"
 
-    - name: eval2
-      lineinfile:
-        path: "{{ rbenv_dir }}/.bashrc"
-        line: eval "~/.rbenv/bin/rbenv init - bash)" 
-                                                       
-#meta: reset_connection # logout -> login
+        - name: eval1
+          lineinfile:
+            path: "{{ ansible_env.HOME }}/.bashrc"
+            line: eval "{{ ansible_env.HOME }}/bin/rbenv init - bash"
+
+        - name: check
+          debug:
+            msg: "{{ ansible_env.HOME }}"
+
+            #    - name: install ruby 3.1.3
+            #      become: yes
+            #      command:
+            #        cmd: "rbenv install 3.1.3"
+
+             #   - name: installations under redmine user
+             #     become_user: redmine
+             #     block:
+             #
+             #       - name: set local ruby version
+             #         command:
+             #           cmd: "rbenv local 3.1.3"
+             #
+             #       - name: checkout Redmine source files
+             #         git:
+             #           repo: "https://github.com/redmine/redmine"
+             #           dest: "{{ ansible_env.HOME }}/opt/redmine"
