--- a/ansible-redmine-manual/Vagrantfile
+++ b/ansible-redmine-manual/Vagrantfile
@@ -3,7 +3,7 @@ Vagrant.configure("2") do |config|
   config.vm.box_download_options = {"limit-rate": "10240K"}
   config.vm.hostname = "jammy"
   config.vm.provision "ansible", playbook: "ansible-redmine.yml"
-  config.vm.network "private_network", ip: "192.168.56.100"
+  config.vm.network "forwarded_port", guest: 3000, host: 3000
   config.vm.provider "virtualbox" do |vb|
      vb.memory = "2048"
    end
